--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://lclemente225.github.io/",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
@@ -22,7 +23,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "gh-pages": "^5.0.0",
-    "vite": "^4.3.9"
+    "vite": "^4.4.2"
   },
   "main": "vite.config.js",
   "author": "",
